fixing overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
 body {
     background: #ffffff;
+    overflow-x: hidden;
 }
 
 a{
